[package]
name = "exercise1"
version = "0.1.0"
authors = ["Xiaoyan Xu <xuxiaoyansean@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.5.5"

[[bin]]
name = "meet1a"
path = "src/meet1a.rs"

[[bin]]
name = "meet1b"
path = "src/meet1b.rs"

[[bin]]
name = "meet2a"
path = "src/meet2a.rs"

[[bin]]
name = "meet2b"
path = "src/meet2b.rs"

[[bin]]
name = "meet3"
path = "src/meet3.rs"